--- a/style.css
+++ b/style.css
@@ -37,3 +37,24 @@ nav li a{
 .header{
     background-image: url("Assets/Hero-bg.png");
 }
+
+.action{
+    margin: 116px 159px 116px 141px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.action-title{
+    font-weight: 700;
+    font-size: 42px;
+    color: #252432;
+}
+.action-description{
+    font-weight: 400;
+    font-size: 24px;
+    color: #252432;
+}
+.action-image{
+    border: none;
+    border-radius: 48px;
+}
