--- a/style.css
+++ b/style.css
@@ -96,6 +96,9 @@ nav li a{
     margin: 92px 0px 14px 150px;
     justify-content: center;
     align-items: center;
+    background-color: rgba(255, 255, 255, .50);
+    /* width: 1140px; */
+    height: 632px;
 }
 
 .get-in-touch-form input[type="text"], input[type="email"], .get-in-touch-form textarea{
@@ -135,4 +138,34 @@ nav li a{
     border-radius: 10px;
 }
 
+.footer-heading{
+    color: #4E47FF;
+    font-size: 100px;
+}
+.footer-description{
+    color: #8987A1;
+}
 
+footer ul li{
+    list-style: none;
+    display: flex;
+}
+footer ul a{
+    text-decoration: none;
+    color: #8987A1;
+}
+
+.footer{
+    margin: 104px 455px;
+    text-align: center;
+}
+.footer ul {
+    display: flex;
+    gap: 48px;
+    list-style: none;
+    padding: 0; 
+    margin: 0;
+    justify-content: center;
+    align-items: center;
+    color: #8987A1;
+}
